form js updated

--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -13,6 +13,10 @@
     border-bottom: 1px solid #ddd;
 }
 
+.tasks__item--hidden {
+    display: none;
+}
+
 .tasks__button {
     border: 0;
     width: 30px;
