Made Button Components reacting to list status

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
-*, ::after, ::before {
+*,
+::after,
+::before {
     box-sizing: inherit;
     -webkit-font-smoothing: inherit;
 }
