--- a/src/Form/style.css
+++ b/src/Form/style.css
@@ -10,14 +10,16 @@
 }
 
 .form__button {
-    border: 0;
+    border:none;
     background-color: #008080;
     color: #fff;
     padding: 10px;
+    transition: 0.3s;
 }
 
 .form__button:hover {
     background-color: rgb(0, 153, 153);
+    transform: scale(1.1);
 }
 
 .form__button:active {
