--- a/src/Tasks/style.css
+++ b/src/Tasks/style.css
@@ -51,6 +51,12 @@
     background-color: hsl(348, 83%, 57%);
 }
 
+.tasks__content {
+    color: #000;
+    transition: 0.5s;
+}
+
 .tasks__content--done {
     text-decoration: line-through;
+    color: #999;
 }
